Improvements and simplifications:
- placed the references to `amdatu-*` with `inaetics-*`;
- do not use fleet to start Kubernetes downloads, but instead do
  this during one of the cloud-config stages;
- inlined the docker registry into the first cloud-config stage,
  and remove the docker-announce service as it was not used;
- make sure Docker and Weave are started once the network is
  correctly configured.

--- a/Controller/fleet-units/kube-apiserver.service
+++ b/Controller/fleet-units/kube-apiserver.service
@@ -1,8 +1,8 @@
 [Unit]
 Description=Kubernetes API Server
 Documentation=https://github.com/GoogleCloudPlatform/kubernetes
-After=kube-download.service
-Requires=kube-download.service
+Requires=kubernetes-download.service
+After=kubernetes-download.service
 
 [Service]
 ExecStart=/opt/bin/kube-apiserver \
