--- a/Controller/fleet-units/kube-kubelet.service
+++ b/Controller/fleet-units/kube-kubelet.service
@@ -1,8 +1,8 @@
 [Unit]
 Description=Kubernetes Kubelet
 Documentation=https://github.com/GoogleCloudPlatform/kubernetes
-After=kube-download.service
-Requires=kube-download.service
+Requires=kubernetes-download.service
+After=kubernetes-download.service
 
 [Service]
 EnvironmentFile=/etc/environment
@@ -17,4 +17,3 @@ RestartSec=10
 
 [X-Fleet]
 Global=true
-MachineMetadata=role=kubernetes
