--- a/Controller/fleet-units/kube-kubelet.service
+++ b/Controller/fleet-units/kube-kubelet.service
@@ -11,6 +11,7 @@ ExecStart=/opt/bin/kubelet \
     --port=10250 \
     --hostname_override=${COREOS_PUBLIC_IPV4} \
     --api_servers=http://172.17.8.20:10260 \
+    --healthz_bind_address=0.0.0.0
     --logtostderr=true
 Restart=always
 RestartSec=10
