let fleet start the kubernetes-download service, so only 1 place where to configure version number...

--- a/Controller/user-data/coreos-k8s.yaml
+++ b/Controller/user-data/coreos-k8s.yaml
@@ -14,6 +14,7 @@ coreos:
              [Service]
              Type=oneshot
              RemainAfterExit=yes
+             ExecStart=/usr/bin/fleetctl start --no-block /home/core/fleet-units/kube-download.service
              ExecStart=/usr/bin/fleetctl start --no-block /home/core/fleet-units/kube-proxy.service
              ExecStart=/usr/bin/fleetctl start --no-block /home/core/fleet-units/kube-kubelet.service
              ExecStart=/usr/bin/fleetctl start --no-block /home/core/fleet-units/kube-apiserver.service
