--- a/Controller/fleet-units/kube-apiserver.service
+++ b/Controller/fleet-units/kube-apiserver.service
@@ -1,17 +1,21 @@
 [Unit]
 Description=Kubernetes API Server
 Documentation=https://github.com/GoogleCloudPlatform/kubernetes
-Requires=kubernetes-download.service
-After=kubernetes-download.service
+Requires=kube-download.service
+After=kube-download.service
 
 [Service]
 ExecStart=/opt/bin/kube-apiserver \
-    --address=0.0.0.0 \
-    --port=10260 \
-    --etcd_servers=http://172.17.8.20:4001 \
-    --portal_net=10.0.0.0/16 \
-    --logtostderr=true \
-    --v=0
+    --insecure-bind-address=0.0.0.0 \
+    --insecure-port=10260 \
+    --bind-address=0.0.0.0 \
+    --secure-port=10270 \
+    --kubelet-https=true \
+    --etcd-servers=http://172.17.8.20:4001 \
+    --service-cluster-ip-range=10.0.0.0/16 \
+    --runtime-config=api/v1beta3 \
+    --allow-privileged=true \
+    --logtostderr=true
 Restart=always
 RestartSec=10
 
