--- a/Controller/fleet-units/kube-kubelet.service
+++ b/Controller/fleet-units/kube-kubelet.service
@@ -1,20 +1,23 @@
 [Unit]
 Description=Kubernetes Kubelet
 Documentation=https://github.com/GoogleCloudPlatform/kubernetes
-Requires=kubernetes-download.service
-After=kubernetes-download.service
+Requires=kube-download.service
+After=kube-download.service
 
 [Service]
 EnvironmentFile=/etc/environment
 ExecStart=/opt/bin/kubelet \
     --address=0.0.0.0 \
     --port=10250 \
-    --hostname_override=${COREOS_PUBLIC_IPV4} \
-    --api_servers=http://172.17.8.20:10260 \
-    --healthz_bind_address=0.0.0.0
+    --hostname-override=${COREOS_PUBLIC_IPV4} \
+    --api-servers=http://172.17.8.20:10260 \
+    --allow-privileged=true \
+    --healthz-bind_address=0.0.0.0 \
+    --healthz-port=10248 \
     --logtostderr=true
 Restart=always
 RestartSec=10
 
 [X-Fleet]
 Global=true
+MachineMetadata=role=kubernetes
