--- a/Controller/fleet-units/kube-proxy.service
+++ b/Controller/fleet-units/kube-proxy.service
@@ -1,8 +1,8 @@
 [Unit]
 Description=Kubernetes Proxy
 Documentation=https://github.com/GoogleCloudPlatform/kubernetes
-Requires=kubernetes-download.service
-After=kubernetes-download.service
+Requires=kube-download.service
+After=kube-download.service
 
 [Service]
 ExecStart=/opt/bin/kube-proxy \
