--- a/Controller/fleet-units/kube-scheduler.service
+++ b/Controller/fleet-units/kube-scheduler.service
@@ -1,8 +1,8 @@
 [Unit]
 Description=Kubernetes API Server
 Documentation=https://github.com/GoogleCloudPlatform/kubernetes
-Requires=kubernetes-download.service
-After=kubernetes-download.service
+Requires=kube-download.service kube-apiserver.service
+After=kube-download.service kube-apiserver.service
 
 [Service]
 ExecStart=/opt/bin/kube-scheduler --master=127.0.0.1:10260
