--- a/Controller/Vagrantfile
+++ b/Controller/Vagrantfile
@@ -9,7 +9,7 @@ $instance_ip="172.17.8.20"
 
 $coreos_channel="alpha"
 $coreos_name="coreos-" + $coreos_channel 
-$coreos_version="= 681.0.0"
+$coreos_version="681.0.0"
 
 $virtualbox_gui = false
 $virtualbox_memory = 1024
