--- a/Controller/Vagrantfile
+++ b/Controller/Vagrantfile
@@ -9,7 +9,7 @@ $instance_ip="172.17.8.20"
 
 $coreos_channel="alpha"
 $coreos_name="coreos-" + $coreos_channel 
-$coreos_version="681.0.0"
+$coreos_version="723.0.0"
 
 $virtualbox_gui = false
 $virtualbox_memory = 1024
@@ -23,7 +23,7 @@ SCRIPT
 Vagrant.configure("2") do |config|
     config.vm.box = $coreos_name
     config.vm.box_version = $coreos_version
-    config.vm.box_url = "http://" + $coreos_channel + ".release.core-os.net/amd64-usr/" + $coreos_version + "/coreos_production_vagrant.json"
+    config.vm.box_url = "http://" + $coreos_channel + ".release.core-os.net/amd64-usr/current/coreos_production_vagrant.json"
 
     config.vm.define vm_name = $instance_name do |config|
         config.vm.hostname = vm_name
