--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "Controller/inaetics-demo/node-agent"]
 	path = Controller/inaetics-demo/node-agent
 	url = https://github.com/INAETICS/node-agent-java.git
+[submodule "Controller/inaetics-demo/celix-agent"]
+	path = Controller/inaetics-demo/celix-agent
+	url = http://github.com/inaetics/node-agent-c.git
+[submodule "Controller/inaetics-demo/felix-agent"]
+	path = Controller/inaetics-demo/felix-agent
+	url = http://github.com/inaetics/node-agent-java.git
