--- a/Controller/fleet-units/kube-download.service
+++ b/Controller/fleet-units/kube-download.service
@@ -8,7 +8,7 @@ Type=oneshot
 RemainAfterExit=yes
 Environment="KUBE_VERSION=v0.18.2"
 ExecStartPre=/bin/bash -c 'mkdir -p /opt/bin'
-ExecStartPre=/bin/bash -c '/usr/bin/wget -O - "https://storage.googleapis.com/kubernetes-release/release/$KUBE_VERSION/kubernetes-server-linux-amd64.tar.gz" | tar -xz -C /opt/bin --strip=3'
+ExecStartPre=/bin/bash -c 'if [ ! -f /opt/bin/kube-apiserver.tar ]; then /usr/bin/wget -O - "https://storage.googleapis.com/kubernetes-release/release/$KUBE_VERSION/kubernetes-server-linux-amd64.tar.gz" | tar -xz -C /opt/bin --strip=3; fi;'
 ExecStart=/bin/bash -c 'chmod 0755 /opt/bin/kube*'
 
 [X-Fleet]
