--- a/Cluster/Vagrantfile
+++ b/Cluster/Vagrantfile
@@ -39,6 +39,7 @@ Vagrant.configure("2") do |config|
             # sync files
             config.vm.synced_folder "bin", "/home/core/bin"
             config.vm.synced_folder "user-data", "/tmp/user-data"
+            config.vm.synced_folder "../Controller/opt/bin", "/opt/bin"
 
             config.vm.provision :shell, :inline => $provision_script
         end
