--- a/Controller/Vagrantfile
+++ b/Controller/Vagrantfile
@@ -39,6 +39,7 @@ Vagrant.configure("2") do |config|
         config.vm.synced_folder "bin", "/home/core/bin"
         config.vm.synced_folder "fleet-units", "/home/core/fleet-units"
         config.vm.synced_folder "inaetics-demo", "/home/core/inaetics-demo"
+        config.vm.synced_folder "images", "/home/core/images"
         config.vm.synced_folder "user-data", "/tmp/user-data"
 
         config.vm.provision :shell, :inline => $provision_script
