--- a/Controller/fleet-units/kube-kubelet.service
+++ b/Controller/fleet-units/kube-kubelet.service
@@ -14,6 +14,7 @@ ExecStart=/opt/bin/kubelet \
     --allow-privileged=true \
     --healthz-bind_address=0.0.0.0 \
     --healthz-port=10248 \
+    --pod_infra_container_image=172.17.8.20:5000/google_containers/pause:0.8.0
     --logtostderr=true
 Restart=always
 RestartSec=10
