--- a/Cluster/Vagrantfile
+++ b/Cluster/Vagrantfile
@@ -40,6 +40,7 @@ Vagrant.configure("2") do |config|
             config.vm.synced_folder "bin", "/home/core/bin"
             config.vm.synced_folder "user-data", "/tmp/user-data"
             config.vm.synced_folder "../Controller/opt/bin", "/opt/bin"
+            config.vm.synced_folder "../Controller/inaetics-demo/node-provisioning/bundles", "/home/core/bundles"
 
             config.vm.provision :shell, :inline => $provision_script
         end
