--- a/Controller/Vagrantfile
+++ b/Controller/Vagrantfile
@@ -41,6 +41,7 @@ Vagrant.configure("2") do |config|
         config.vm.synced_folder "inaetics-demo", "/home/core/inaetics-demo"
         config.vm.synced_folder "user-data", "/tmp/user-data"
         config.vm.synced_folder "opt/bin", "/opt/bin"
+        config.vm.synced_folder "inaetics-demo/node-provisioning/bundles", "/home/core/bundles"
 #        config.vm.synced_folder "my_registry", "/myregistrydata" 
 #        config.vm.synced_folder "my_registry", "/myregistrydata", :nfs => true 
         config.vm.synced_folder "my_registry", "/myregistrydata", :rsync => true 
