--- a/Controller/Vagrantfile
+++ b/Controller/Vagrantfile
@@ -17,7 +17,9 @@ $virtualbox_cpus = 1
 
 # makes all scripts executable & move the cloudinit files to the right place
 $provision_script = <<SCRIPT
-mv /tmp/user-data/* /var/lib/coreos-vagrant/ && find /home/core/* -name '*.sh' -type f -exec chmod 0755 '{}' ';'
+    mv /tmp/user-data/* /var/lib/coreos-vagrant/ && \
+    find /home/core/* -name '*.sh' -type f -exec chmod 0755 '{}' ';' && \
+    chmod 0755 /home/core/opt/bin/* && mkdir -p /opt/bin && mv /home/core/opt/bin/* /opt/bin/ 
 SCRIPT
 
 Vagrant.configure("2") do |config|
@@ -37,6 +39,7 @@ Vagrant.configure("2") do |config|
 
         # sync local directories
         config.vm.synced_folder "bin", "/home/core/bin"
+        config.vm.synced_folder "opt/bin", "/home/core/opt/bin"
         config.vm.synced_folder "fleet-units", "/home/core/fleet-units"
         config.vm.synced_folder "inaetics-demo", "/home/core/inaetics-demo"
         config.vm.synced_folder "images", "/home/core/images"
