--- a/Controller/fleet-units/kube-apiserver.service
+++ b/Controller/fleet-units/kube-apiserver.service
@@ -1,8 +1,6 @@
 [Unit]
 Description=Kubernetes API Server
 Documentation=https://github.com/GoogleCloudPlatform/kubernetes
-Requires=kube-download.service
-After=kube-download.service
 
 [Service]
 ExecStart=/opt/bin/kube-apiserver \
@@ -15,7 +13,8 @@ ExecStart=/opt/bin/kube-apiserver \
     --service-cluster-ip-range=10.0.0.0/16 \
     --runtime-config=api/v1beta3 \
     --allow-privileged=true \
-    --logtostderr=true
+    --logtostderr=true \
+    --v=3
 Restart=always
 RestartSec=10
 
