--- a/Controller/fleet-units/kube-controller-manager.service
+++ b/Controller/fleet-units/kube-controller-manager.service
@@ -1,13 +1,14 @@
 [Unit]
 Description=Kubernetes Controller Manager
 Documentation=https://github.com/GoogleCloudPlatform/kubernetes
-Requires=kube-download.service kube-apiserver.service
-After=kube-download.service kube-apiserver.service
+Requires=kube-apiserver.service
+After=kube-apiserver.service
 
 [Service]
 ExecStart=/opt/bin/kube-controller-manager \
     --master=127.0.0.1:10260 \
-    --logtostderr=true
+    --logtostderr=true \
+    --v=3
 Restart=always
 RestartSec=10
 
