--- a/Controller/fleet-units/kube-proxy.service
+++ b/Controller/fleet-units/kube-proxy.service
@@ -1,13 +1,12 @@
 [Unit]
 Description=Kubernetes Proxy
 Documentation=https://github.com/GoogleCloudPlatform/kubernetes
-Requires=kube-download.service
-After=kube-download.service
 
 [Service]
 ExecStart=/opt/bin/kube-proxy \
     --master=http://172.17.8.20:10260 \
-    --logtostderr=true
+    --logtostderr=true \
+    --v=3
 Restart=always
 RestartSec=10
 
