detect node shutdown faster
nevertheless rescheduling pods takes 4-5 minutes, see https://groups.google.com/forum/#!msg/google-containers/xoohw81bIPw/cnxEGluuCmEJ

--- a/Controller/fleet-units/kube-controller-manager.service
+++ b/Controller/fleet-units/kube-controller-manager.service
@@ -7,6 +7,7 @@ After=kube-apiserver.service
 [Service]
 ExecStart=/opt/bin/kube-controller-manager \
     --master=127.0.0.1:10260 \
+    --node-monitor-grace-period=10s \
     --logtostderr=true \
     --v=3
 Restart=always
