--- a/Controller/fleet-units/kube-kubelet.service
+++ b/Controller/fleet-units/kube-kubelet.service
@@ -9,9 +9,9 @@ ExecStart=/opt/bin/kubelet \
     --port=10250 \
     --hostname-override=${COREOS_PUBLIC_IPV4} \
     --api-servers=http://172.17.8.20:10260 \
+    --node-status-update-frequency=2s \
     --allow-privileged=true \
     --healthz-bind_address=0.0.0.0 \
-    --healthz-port=10248 \
     --logtostderr=true \
     --v=3
 Restart=always
