--- a/Controller/fleet-units/kube-apiserver.service
+++ b/Controller/fleet-units/kube-apiserver.service
@@ -9,7 +9,7 @@ ExecStart=/opt/bin/kube-apiserver \
     --bind-address=0.0.0.0 \
     --secure-port=10270 \
     --kubelet-https=true \
-    --etcd-servers=http://localhost:2379 \
+    --etcd-servers=http://172.17.8.20:2379 \
     --service-cluster-ip-range=10.0.0.0/16 \
     --runtime-config=api/v1beta3 \
     --allow-privileged=true \
