--- a/Controller/fleet-units/kube-apiserver.service
+++ b/Controller/fleet-units/kube-apiserver.service
@@ -11,7 +11,7 @@ ExecStart=/opt/bin/kube-apiserver \
     --kubelet-https=true \
     --etcd-servers=http://172.17.8.20:2379 \
     --service-cluster-ip-range=10.0.0.0/16 \
-    --runtime-config=api/v1beta3 \
+    --runtime-config=api/v1 \
     --allow-privileged=true \
     --logtostderr=true \
     --v=3
