Initial version with heapster,influxdb and grafana.

--- a/Controller/user-data/coreos-k8s.yaml
+++ b/Controller/user-data/coreos-k8s.yaml
@@ -30,8 +30,14 @@ coreos:
              EnvironmentFile=/etc/kubernetes.env
              ExecStart=/opt/bin/kubectl create -f /home/core/inaetics-demo/k8s/ace-provisioning-service.json
              ExecStart=/opt/bin/kubectl create -f /home/core/inaetics-demo/k8s/inaetics-viewer-service.json
+             ExecStart=/opt/bin/kubectl create -f /home/core/inaetics-demo/k8s/influxdb-service.json
+             ExecStart=/opt/bin/kubectl create -f /home/core/inaetics-demo/k8s/grafana-service.json
+             ExecStart=/opt/bin/kubectl create -f /home/core/inaetics-demo/k8s/heapster-service.json
              ExecStop=/opt/bin/kubectl stop -f /home/core/inaetics-demo/k8s/ace-provisioning-service.json
              ExecStop=/opt/bin/kubectl stop -f /home/core/inaetics-demo/k8s/inaetics-viewer-service.json
+             ExecStop=/opt/bin/kubectl stop -f /home/core/inaetics-demo/k8s/influxdb-service.json
+             ExecStop=/opt/bin/kubectl stop -f /home/core/inaetics-demo/k8s/grafana-service.json
+             ExecStop=/opt/bin/kubectl stop -f /home/core/inaetics-demo/k8s/heapster-service.json
 
        - name: inaetics-k8s-controllers.service
          command: start
@@ -51,11 +57,16 @@ coreos:
              ExecStart=/opt/bin/kubectl create -f /home/core/inaetics-demo/k8s/inaetics-processor-celix-controller.json
              ExecStart=/opt/bin/kubectl create -f /home/core/inaetics-demo/k8s/inaetics-producer-controller.json
              ExecStart=/opt/bin/kubectl create -f /home/core/inaetics-demo/k8s/inaetics-queue-controller.json
+             ExecStart=/opt/bin/kubectl create -f /home/core/inaetics-demo/k8s/influxdb-grafana-controller.json
+             ExecStart=/opt/bin/kubectl create -f /home/core/inaetics-demo/k8s/heapster-controller.json
+                
              ExecStop=/opt/bin/kubectl stop -f /home/core/inaetics-demo/k8s/ace-provisioning-controller.json
              ExecStop=/opt/bin/kubectl stop -f /home/core/inaetics-demo/k8s/inaetics-datastore-viewer-controller.json
              ExecStop=/opt/bin/kubectl stop -f /home/core/inaetics-demo/k8s/inaetics-processor-controller.json
              ExecStop=/opt/bin/kubectl stop -f /home/core/inaetics-demo/k8s/inaetics-processor-celix-controller.json
              ExecStop=/opt/bin/kubectl stop -f /home/core/inaetics-demo/k8s/inaetics-producer-controller.json
              ExecStop=/opt/bin/kubectl stop -f /home/core/inaetics-demo/k8s/inaetics-queue-controller.json
+             ExecStop=/opt/bin/kubectl stop -f /home/core/inaetics-demo/k8s/heapster-controller.json
+             ExecStop=/opt/bin/kubectl stop -f /home/core/inaetics-demo/k8s/influxdb-grafana-controller.json
 
 ###EOF###
