--- a/Cluster/Vagrantfile
+++ b/Cluster/Vagrantfile
@@ -14,7 +14,7 @@ $coreos_version="789.0.0"
 
 $virtualbox_gui = false
 $virtualbox_memory = 1024
-$virtualbox_cpus = 1
+$virtualbox_cpus = 2
 
 # makes all scripts executable & move the cloudinit file to the right place
 $provision_script = <<SCRIPT
@@ -44,6 +44,7 @@ Vagrant.configure("2") do |config|
             config.vm.synced_folder "../Controller/images", "/home/core/images"
             config.vm.synced_folder "../Controller/inaetics-demo/images", "/home/core/inaetics-demo/images"
             config.vm.synced_folder "../Controller/inaetics-demo/node-provisioning/bundles", "/home/core/bundles"
+            config.vm.synced_folder "../Controller/influxdb_data", "/home/core/influxdb_data"
             config.vm.synced_folder "user-data", "/tmp/user-data"
             config.vm.provision :shell, :inline => $provision_script
 
